-
Bug
-
Resolution: Done
-
P2: Important
-
5.14.0
-
92ae8746c412fbc87a97364eb4d86e470009f80d (qt/qtsvg/5.14)
Customer informed that they have had project where they use svg with fonts. This has worked previously but after 5.14 it the fonts are not presented accurate.
Example pictures attached.
Qt support has tested example project with Qt 5.12.6 and where the font was correct and with Qt 5.14 it appeared wrong.
Example project has been attached.
For Gerrit Dashboard: QTBUG-81926 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
291101,3 | Strip the quotes around the font family | 5.14 | qt/qtsvg | Status: MERGED | +2 | 0 |