Strip the quotes around the font family

Due to changes in how QFont handles a family it should be given the
whole string without quotes so it can find the family name correctly.
Additionally, this changes it to use setFamilies instead of setFamily
to make this more future-proof.

Fixes: QTBUG-81926
Change-Id: I659950cf244c1f7a1a5dae6e7b0e136cfe274d47
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>